css/main.css
:root {
  --font-sans-serif: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
  --color-yellow: #ffb800;
  --color-black: #050505;
  --color-gray-light: #f5f5f5;
}
html {
  box-sizing: border-box;
}
*, *::before, *::after {
  box-sizing: inherit;
}
body {
  font-family: var(--font-sans-serif);
  color: var(--color-black);
  font-weight: 400;
  font-size: 1.125rem;
}
.main-page__body {
  background-color: var(--color-gray-light);
}
h1, h2, h3, h4, h5 {
  font-size: 1.125rem;
  line-height: 0.75;
  padding: 0;
}
h1, h3 {
  font-weight: 900;
}
h2 {
  font-weight: 400;
}
/* h3 {
  writing-mode: vertical-rl;
} */
a {
  color: var(--color-black);
  text-decoration: none;
}
img {
  display: block;
  max-width: 100%;
}

.home-page__main {
  display: flex;
  flex-direction: column;
  padding: 120px 144px 96px 144px;
  gap: 24px;
}
@media (max-width: 999px) {
  .home-page__main {
    padding: 0px 24px 96px;
  }
 }


/*--Header--*/
.header {
  margin-bottom: 150px;
}
@media (max-width: 999px) {
  .header {
    width: 100%;
    margin: 24px;
  }
}
.header a {
  display: flex;
}
@media (min-width: 1000px) {
  .header a {
    flex-direction: column;
  }
}
.header__logo {
  margin-bottom: 36px;
  width: 96px;
}
@media (max-width: 999px) {
  .header__logo {
    width: 54px;
    margin-right: 24px;
  }
}
.header__title-container {
  position: relative;
  width: 96px;
  height: 96px;
}
@media (min-width: 1000px) {
  .header__title-container {
  transform: rotate(90deg);
  transform-origin: center;
  }
}
.header__title {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  white-space: nowrap;
}
.header__title h1 {
  margin-bottom: 0;
}
.header__title h2  {
  margin-top: 0.5rem;
}
@media (min-width: 999px) {
  .home-page__header {
    position: fixed;
    top: 0;
    padding: 24px;
  }
}

/*--Artist Section--*/
.artist-section {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(2, 1fr);
  gap: 24px;
}
@media (max-width: 1000px) {
  .artist-section {
    grid-template-rows: auto repeat(2, 1fr);
  }
}
.artist-section-1 {
  grid-template-areas: ". title img-lg img-lg" ". img-sm img-lg img-lg";
}
@media (max-width: 1000px) {
  .artist-section-1 {
    grid-template-areas: ". . . ." ". title img-lg img-lg" ". img-sm img-lg img-lg";
  }
}
.artist-section-2 {
  grid-template-areas: "img-lg img-lg img-sm ." "img-lg img-lg title .";
}
@media (max-width: 1000px) {
  .artist-section-2 {
    grid-template-areas: ". . . ." "img-lg img-lg img-sm ." "img-lg img-lg title .";
  }
}
.artist-section-3 {
  grid-template-areas: ". . img-lg img-lg" "img-sm title img-lg img-lg";
}
@media (max-width: 1000px) {
  .artist-section-3 {
    grid-template-areas: ". . . ." ". . img-lg img-lg" "img-sm title img-lg img-lg";
  }
}
.artist-section.artist-section-3 h3 {
  margin-right: auto;
}
.artist-section-4 {
  grid-template-areas: "img-lg img-lg . img-sm" "img-lg img-lg title .";
}
@media (max-width: 1000px) {
  .artist-section-4 {
    grid-template-areas: ". . . ." "img-lg img-lg . img-sm" "img-lg img-lg title .";
  }
}
.artist-section.artist-section-4 h3 {
  margin-right: auto;
  align-self: flex-end;
}
.artist-section:hover h3 {
  color: var(--color-yellow);
}
.artist-section:hover .artist-section__img {
  filter: grayscale(1) blur(0);
}
.artist-section a {
  display: contents;
  align-self: flex-end;
}
.artist-section__title {
  display: flex;
  flex-direction: row;
  vertical-align: baseline;
  grid-area: title;
}
/* @media (min-width: 1000px) {
  .artist-section__title {
    transform: rotate(90deg);
  }
} */
@media (max-width: 999px) {
  .artist-section__title {
    grid-column: 1/-1;
    grid-row: 1;
  }
}
.artist-section__title {
  margin: 0;
  font-size: 1.125rem;
}
.artist-section__title-name {
  display: flex;
  flex-direction: row;
  margin: 0;
  font-size: 1.125rem;
  transition: 200ms;
}
@media (min-width: 1000px) {
  .artist-section__title-name {
    writing-mode: vertical-rl;
    grid-area: title;
  }
}
@media (max-width: 999px) {
  .artist-section__title-name {
    grid-column: 1/-1;
    grid-row: 1;
    margin-bottom: -20px;
  }
}
.artist-section__title-name::before {
  display: block;
  width: 14px;
  height: 14px;
  background-color: var(--color-yellow);
  border-radius: 50%;
  content: "";
  margin: 0 8px 8px 0;
}
.artist-section__title-dot {
  width: 14px;
  height: 14px;
  background-color: var(--color-yellow);
  border-radius: 50%;
  margin-right: 5px;
  margin-top: 0.9px;
}
.artist-section__img {
  padding-top: 100%;
  background-size: cover;
  filter: grayscale(1) blur(3px);
  clip-path: padding-box;
  transition: 400ms;
}
.artist-section__img-lg {
  grid-area: img-lg;
}
.artist-section__img-sm {
  grid-area: img-sm;
}
.img-lg-adam-beyer {
  background-image: url("https://wearebigfoot.com/lib/artist/1_primary_large.jpg");
}
.img-sm-adam-beyer {
  background-image: url("https://wearebigfoot.com/lib/artist/1_secondary_large.jpg");
}
.img-lg-dense-pika {
  background-image: url("https://wearebigfoot.com/lib/artist/6_primary_large.jpg");
}
.img-sm-dense-pika {
  background-image: url("https://wearebigfoot.com/lib/artist/6_secondary_large.jpg");
}
.img-lg-joris-voom {
  background-image: url("https://wearebigfoot.com/lib/artist/7_primary_large.jpg");
}
.img-sm-joris-voom {
  background-image: url("https://wearebigfoot.com/lib/artist/7_secondary_large.jpg");
}
.img-lg-layton-giordani {
  background-image: url("https://wearebigfoot.com/lib/artist/8_primary_large.jpg");
}
.img-sm-layton-giordani {
  background-image: url("https://wearebigfoot.com/lib/artist/8_secondary_large.jpg");
}
.img-lg-luciid {
  background-image: url("https://wearebigfoot.com/lib/artist/11_primary_large.jpg");
}
.img-sm-luciid {
  background-image: url("https://wearebigfoot.com/lib/artist/11_secondary_large.jpg");
}
.img-lg-luigi-madonna {
  background-image: url("https://wearebigfoot.com/lib/artist/9_primary_large.jpg");
}
.img-sm-luigi-madonna {
  background-image: url("https://wearebigfoot.com/lib/artist/9_secondary_large.jpg");
}
.img-lg-will-atkinson {
  background-image: url("https://wearebigfoot.com/lib/artist/10_primary_large.jpg");
}
.img-sm-will-atkinson {
  background-image: url("https://wearebigfoot.com/lib/artist/10_secondary_large.jpg");
}

/*--Footer--*/
.footer {
  border-top: 1px solid var(--color-black);
}
.footer__contact {
  font-weight: 900;
  margin: 0;
}
.footer__contact-email {
  margin-top: 5px;
  margin-bottom: 0;
}
.home-page__footer {
  padding: 24px;
}

/*--Component page specific--*/
.content-page__body {
  display: grid;
  grid-template-columns: 300px 1fr;
  grid-template-areas: "nav main";
}
.page-nav {
  grid-area: nav;
  position: fixed;
  overflow-y: auto;
  background-color: var(--color-gray-light );
  height: 100%;
  width: 300px;
}
.page-nav__container {
  padding: 30px;
}
.page-nav__container h1, h2 {
  line-height: 1.5rem;
}
.page-nav__container h1 {
  margin-bottom: 0;
}
.page-nav__container h2 {
  margin-top: 0;
}
.page-nav__section {
  margin-top: 50px;
}
.page-nav__section h2 {
  font-weight: 900;
}
.page-nav__section a:hover {
  color: var(--color-yellow);
}
ul {
  list-style-type: none;
  padding-left: 0;
}
.main {
 padding: 30px;
 overflow-y: auto;
 grid-area: main;
}
.rotate {
  writing-mode: vertical-rl;
}
.component__name {
  max-width: 100%;
  background-color: var(--color-black);
  color: var(--color-gray-light);
  padding: 10px;
  margin-bottom: 0;
}
.component__img {
  max-width: 100%;
  border: 1px solid var(--color-gray-light);
}
.component__code {
  max-width: 100%;
  border: 1px solid var(--color-gray-light);
}

